tests/snapshots/formatting_snapshot_tests__block_closer_keep.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
---
# Keep mode: preserve arguments as-is
if(WIN32)
	set(PLATFORM windows)
else(WIN32)
	set(PLATFORM unix)
endif(WIN32)

foreach(item ${LIST})
	message(${item})
endforeach(item)

function(my_func ARG1 ARG2)
	message(${ARG1})
endfunction(my_func)

macro(my_macro X Y)
	set(${X} ${Y})
endmacro(my_macro)

while(${COUNTER} LESS 10)
	math(EXPR COUNTER "${COUNTER} + 1")
endwhile(${COUNTER} LESS 10)

# Empty closers should also be preserved
if(UNIX)
	set(A b)
endif()

# Nested blocks
if(WIN32)
	if(MSVC)
		set(COMPILER msvc)
	endif(MSVC)
endif(WIN32)
