tests/snapshots/formatting_snapshot_tests__bracket_arg_byte_identical.snap
---
source: tests/formatting_snapshot_tests.rs
expression: "format_text(\"message([[simple bracket arg]])\", &config)"
---
message([[simple bracket arg]])
