tests/snapshots/formatting_snapshot_tests__bracket_arg_multiline.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
---
set(HELP
    [[
Usage: myapp [options]
  --help     Show help
  --version  Show version
]]
)
