tests/snapshots/formatting_snapshot_tests__comment_after_closing_paren.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
---
message(hello) # attached comment
