tests/snapshots/formatting_snapshot_tests__comment_between_args.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
---
set(LIST
	a
	# middle comment
	b
)
