tests/snapshots/formatting_snapshot_tests__deeply_nested_variable_ref.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
---
set(DEEPLY_NESTED ${${OUTER_${INNER}}})
