tests/snapshots/formatting_snapshot_tests__formatting_snapshots@blank_lines.cmake.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
input_file: tests/format_fixtures/blank_lines.cmake
---
cmake_minimum_required(VERSION 3.20
)
project(BlankLines
)

set(A b)

set(C d)

# Comment after blank
set(E f)

message(done)
